[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tilepipe2-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for TilePipe2 autotile generation workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"fastmcp>=2.0.0",
	"pydantic>=2.0.0",
	"anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.0.0",
	"pytest-asyncio>=0.21.0",
	"ruff>=0.1.0",
]

[project.scripts]
tilepipe2-mcp = "tilepipe_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tilepipe_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

